--- a/Frontend/css/abyss.css
+++ b/Frontend/css/abyss.css
@@ -1,3 +1,22 @@
+@font-face {
+  font-family: "Valorant Font";
+  src: url("../../fonts/Valorant Font.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
 *,
 *::before,
 *::after {
@@ -7,128 +26,6 @@
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
-}
-
-html {
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  margin: 0;
-  line-height: 1.5;
-  font-family: sans-serif;
-}
-
-main {
-  display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-
-p,
-ul,
-ol,
-figure,
-blockquote {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-  color: inherit;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-  height: auto;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-}
-
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-textarea {
-  overflow: auto;
-  resize: vertical;
-}
-
-input,
-textarea {
-  padding: 0.25rem;
-}
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-legend {
-  padding: 0;
-  font-size: 1rem;
-}
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1rem;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-sub,
-sup {
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.25em;
 }
 
 header {
@@ -164,47 +61,32 @@ header h1 {
   margin-right: 3px;
 }
 
-.card1 {
+.card:nth-child(1) {
   background-image: url("../assets/img/maps/01gww4344ga2w4g105yz.webp");
 }
 
-.card2 {
+.card:nth-child(2) {
   background-image: url("../assets/img/maps/05ea5a1b66bf52b9f64eb003903c9962b6c43136-1694x952.jpg");
 }
 
-.card3 {
+.card:nth-child(3) {
   background-image: url("../assets/img/maps/valorant-icebox-ep-8-meio-ataque-depois.webp");
 }
 
-.card4 {
+.card:nth-child(4) {
   background-image: url("../assets/img/maps/mapa-sunset-valorant-2-copiar-scaled.jpg");
 }
 
-.card5 {
+.card:nth-child(5) {
   background-image: url("../assets/img/maps/haven4.jpg");
 }
 
-.card6 {
+.card:nth-child(6) {
   background-image: url("../assets/img/maps/mapa-ascent-valorant-4-1120x630.jpg");
 }
 
-@font-face {
-  font-family: "Valorant Font";
-  src: url("../../fonts/Valorant Font.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@keyframes gradientShift {
-  0% {
-    background-position: 0% 0%;
-  }
-  50% {
-    background-position: 100% 100%;
-  }
-  100% {
-    background-position: 0% 0%;
-  }
+.card:nth-child(7) {
+  background-image: url("../assets/img/maps/Loading_Screen_Abyss.webp");
 }
 
 .container {
@@ -227,40 +109,31 @@ header h1 {
   position: relative;
 }
 
-.skills {
+.skills,
+.maps {
   position: sticky;
-  top: 20px; /* Ajuste a distância do topo conforme necessário */
+  top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 15%;
+  width: 20%;
+  height: 600px;
 }
 
-.maps {
-  top: 20px; /* Ajuste a distância do topo conforme necessário */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 15%;
+.skills img {
+  width: 100%;
 }
 
 .agents {
-  width: 70%;
+  width: 60%;
   height: 100%;
-  padding: 30px;
+  padding: 0 30px;
 
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
   align-items: center;
-}
-
-@font-face {
-  font-family: "Valorant Font";
-  src: url("../../fonts/Valorant Font.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
 }
 
 .card {
@@ -303,31 +176,22 @@ header h1 {
   color: #ff6347;
 }
 
-/* Fonte personalizada para o site */
-@font-face {
-  font-family: "Valorant Font";
-  src: url("../../fonts/Valorant Font.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+/* Estilo para o card ativo (igual ao estado hover) */
+.card.active {
+  transform: scale(1.05);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2), 0 0 20px rgba(255, 255, 255, 0.6);
+  opacity: 1;
 }
 
-/* Configurações de layout para partes superior e inferior dos agentes */
-.toppart,
-.bottompart {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-  padding: 20px;
-  height: 50%;
-  width: 100%;
-  flex-wrap: wrap; /* Permite que os elementos se ajustem conforme necessário */
+.card.active h2 {
+  transform: scale(1.2);
+  color: #ff6347;
 }
 
 /* Estilos para os cartões de agentes */
 .cardagnts {
-  width: 200px;
-  height: 250px;
+  width: 240px;
+  height: 300px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -460,4 +324,31 @@ header h1 {
 .cardagnts:hover .character {
   opacity: 1;
   transform: translate3d(5%, -20%, 670px);
+}
+
+@media screen and (max-width: 870px) {
+  .skills,
+  .maps {
+    width: 25%;
+  }
+
+  .agents {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .cardagnts {
+    width: 275px;
+    height: 325px;
+  }
+
+  .skills,
+  .maps {
+    width: 15%;
+  }
+
+  .agents {
+    width: 70%;
+  }
 }
